--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nixos-private-config"]
 	path = nixos-private-config
 	url = https://github.com/walseb/nixos-private-config
+[submodule "system-modules/overlays/musnix"]
+	path = system-modules/overlays/musnix
+	url = https://github.com/musnix/musnix
