Added bluetooth, updated version, etc

--- a/deps/hoogle/HoogleDeps.cabal
+++ b/deps/hoogle/HoogleDeps.cabal
@@ -25,4 +25,4 @@ executable HoogleDeps
 
                 , exception-transformers
                 , transformers
-                , GPipe
+                , GPipe-Core
