--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-/*
-
-!.gitignore
-!.gitmodules
-
-!configuration.nix
-!system-device-template.nix
-!/nixos-private-config/
-
-!home.nix
-
-!home-device-template.nix
-!/home-hw-configs/
-!/modules-home/
-!/modules-system/
-!/hw-configs/
-!/loose-configs/
-!/bin
-!/deps
-!/pkgs
-
-/deps/hoogle/dist-newstyle
+dist-newstyle
+hardware-configuration.nix
+nix-var/
+system-device.nix
+home-device.nix
