--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "deps/plover-lapwing-dictionary"]
 	path = deps/plover-lapwing-dictionary
 	url = https://github.com/aerickt/steno-dictionaries
+[submodule "cfg/emacs"]
+	path = cfg/emacs
+	url = git@github.com:walseb/QualityEmacsConfig
+[submodule "cfg/lapwing"]
+	path = cfg/lapwing
+	url = https://github.com/aerickt/steno-dictionaries
